<resources>
    <string name="app_name" translatable="false">Mobi Tailor</string>

    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="ok">OK</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>

    <string name="customer_name">Customer Name</string>
    <string name="last_update">Last Updated on:&#160;</string>
    <string name="unknown">Unknown</string>

    <string name="login_text">Login</string>
    <string name="signin_text">Mobile SignIn</string>
    <string name="country_code" translatable="false">+91</string>
    <string name="phone_hint">Enter phone number</string>
    <string name="verify">Verify</string>

    <string name="profile">Profile</string>
    <string name="shop_name">Name of Shop:</string>
    <string name="owner_name">Owner name:</string>
    <string name="address">Address:&#160;</string>
    <string name="delete_customer">&#160;Delete Customer</string>

    <!--    new customer activity-->
    <string name="name_of_customer">Name:</string>
    <string name="customer_mobile">Mobile:</string>
    <string name="customer_address">Address:</string>

    <!--Shirt Measurements-->
    <string name="shirt_height">Height</string>
    <string name="shirt_chest">Chest</string>
    <string name="shirt_stomach">Stomach</string>
    <string name="shirt_seat">Seat</string>
    <string name="shirt_shoulder">Shoulder</string>
    <string name="shirt_sleeves">Sleeves</string>
    <string name="shirt_sleeves_full">Full</string>
    <string name="shirt_sleeves_half">Half</string>
    <string name="shirt_sleeves_cuff">Cuff</string>
    <string name="shirt_bicep">Bicep</string>
    <string name="shirt_collar">Collar</string>
    <string name="shirt_front">Front</string>
    <string name="shirt_box_patti">Box Patti</string>
    <string name="shirt_in_patti">In Patti</string>
    <string name="shirt_cover_silai">Cover Silai</string>
    <string name="shirt_plain_silai">Plain Silai</string>

    <string name="type">Type</string>
    <string-array name="shirt_type_list">
        <item>Apple</item>
        <item>Open</item>
        <item>Manilla</item>
        <item>3 Button Shirt</item>
        <item>Safari</item>
        <item>Nehru / Kurta</item>
    </string-array>

    <!--Pant Measurements-->
    <string name="pant_height">Height</string>
    <string name="pant_waist">Waist</string>
    <string name="pant_seat">Seat</string>
    <string name="pant_bottom">Bottom</string>
    <string name="pant_knee">Knee</string>
    <string name="pant_thigh">Thigh</string>
    <string name="pant_seat_round">Seat Round</string>
    <string name="pant_seat_utaar">Seat Utaar</string>
    <string name="pant_type">Type</string>

    <string-array name="pant_type_list">
        <item>Bootcut</item>
        <item>Baggi Pant</item>
        <item>Belt / Button Paijama</item>
        <item>Belt / Chain Paijama</item>
        <item>Nadi / Button Paijama</item>
        <item>Nadi Paijama</item>
        <item>Salwar</item>
    </string-array>

    <string name="pant_baggy">Baggy</string>
    <string name="pant_bootcut">Bootcut</string>
    <string name="pant_pocket">Pocket</string>
    <string name="pant_side_pocket">Side Pocket</string>
    <string name="pant_cross_pocket">Cross Pocket</string>
    <string name="pant_plates">Plates</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pant_side_stitch">Side Stitch</string>
    <string name="pant_side_plane">Side Plane</string>
    <string name="pant_bottom_stitch">Bottom Stitch</string>
    <string name="pant_hand_stitch">Hand Stitch</string>
    <string name="pant_back_pocket">Back Pocket</string>
    <string name="pant_patti_pocket">Patti Pocket</string>
    <string name="pant_bone_pocket">Bone Pocket</string>
    <string name="notes">Notes</string>


    <string name="cloth_color" translatable="false">Color of Cloth:</string>
    <string-array name="cloth_color_list">
        <item>Raymond Navy</item>
        <item>Navy Blue</item>
        <item>Cherry</item>
        <item>Military Green</item>
        <item>Khaaki</item>
        <item>White</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>


    <string-array name="language_values">
        <item>en</item>
        <item>mr</item>
    </string-array>
    <string-array name="language_entries">
        <item>English</item>
        <item>Marathi</item>
    </string-array>
    <string name="call_customer">&#160;Call Customer</string>
    <string name="customers">Customers</string>
    <string name="measurements">Measurement</string>
    <string name="new_order">New Order</string>
    <string name="view_orders">View Orders</string>
    <string name="otp_hint">Enter OTP here</string>
    <string name="view_customers">View Customers</string>
    <string name="measurement_select_customer">Measurement: Select Customer</string>
    <string name="new_order_select_customer">New Order: Select Customer</string>
    <string name="show_orders_select_customer">Show Order: Select Customer</string>
    <string name="organizations">Organizations</string>
    <string name="select_org">Select Organization</string>
    <string name="item">Item</string>
    <string name="quantity">Quant</string>
    <string name="rate">Rate</string>
    <string name="total">Total</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="rupee_symbol" translatable="false">₹&#160;</string>
    <string name="advance">Advance</string>
    <string name="pending">Pending</string>
    <string name="shirt">Shirt</string>
    <string name="pant">Pant</string>
    <string name="shirt_measurements">Shirt Measurements</string>
    <string name="pant_measurements">Pant Measurements</string>
    <string name="select_item">Select Item</string>
    <string name="order_details">Bill Details</string>
    <string name="order_ref_no">Order Ref No</string>
    <string name="view_bill_pdf">View Bill in PDF</string>
    <string name="send_bill_whatsapp">Send Bill to Whatsapp</string>
    <string name="edit_order_details">Edit Order Details</string>
    <string name="order_date">Booking Date</string>
    <string name="customer_list_empty">Add New Customers by Clicking + button below</string>
    <string name="about_instructions">In order to use this app with full features, Kindly contact to below mentioned number</string>
    <string name="limit_error">Thank you for using trial version! Please press OK to get further  Instructions!</string>
    <string name="create_new_bill">Create New Bill</string>
</resources>
