<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity"
    android:background="@drawable/bg"
    android:id="@+id/profile_layout">

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gabriola"
        android:gravity="center_horizontal"
        android:text="@string/profile"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/heading_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_card"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/text_shop_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/shop_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/form_text" />

            <EditText
                android:id="@+id/edit_shop_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="e.g. Adarsh Tailors"
                android:inputType="textCapWords"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/form_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/text_owner_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/owner_name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/form_text" />

            <EditText
                android:id="@+id/edit_owner_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="e.g. Mr XYZ"
                android:inputType="textCapWords"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/form_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/text_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/address"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/form_text" />

            <EditText
                android:id="@+id/edit_shop_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="e.g. Sangola"
                android:inputType="textCapSentences"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/form_text" />
        </LinearLayout>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/roboto"
            android:onClick="onClickProfile"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/login_page_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>