<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/parent_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/bg">


    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/gabriola"
        android:text="@string/login_text"
        android:textSize="@dimen/heading_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_card"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:text="@string/signin_text"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/primary_heading_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:drawableLeft="@drawable/ic_phone"
                android:fontFamily="@font/roboto"
                android:text="@string/country_code"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/login_page_text" />

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/login_page_text" />

        </LinearLayout>

        <Button
            android:id="@+id/verify_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/roboto"
            android:onClick="onClickLogin"
            android:text="Verify"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/login_page_text" />

        <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:drawableLeft="@drawable/ic_check"
            android:gravity="center"
            android:hint="Enter OTP here"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorHint"
            android:textSize="@dimen/login_page_text" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/roboto"
            android:onClick="onClickLogin"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/login_page_text" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>